Fix spacing and centering of images

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -215,16 +215,26 @@ header {
 
 	li {
 		background-color: #eee;
+		border: 1px solid #ccc;
 		display: inline-block;
-		height: 215px;
-		margin: 5px;
+		height: 220px;
+		margin: 1px;
 		padding: 10px;
+		position: relative;
 		text-align: center;
 		width: 215px;
 	}
 	img {
 		max-height: 200px;
 		max-width: 200px;
+		width: auto;
+	    height: auto;
+	    position: absolute;
+	    top: 0;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
+	    margin: auto;
 	}
 }
 
